feature: 做好发布准备

--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,26 @@
+.env
+.eslintrc.yml
+.npmignore
 examples
+tsconfig.json
+.env.production
+.git
+.prettierignore
+Makefile
+jest.config.js
+rollup.config.js
+types
+.DS_Store
+.env.test
+.github
+.prettierrc.yml
+lib
+scripts
+yarn-error.log
+.babelrc
+.eslintignore
+.gitignore
+CONTRIBUTING.md
+node_modules
+src
+yarn.lock
