--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:test": "NODE_ENV=test pnpm build",
     "build:prod": "NODE_ENV=production pnpm build",
     "clean": "rimraf dist",
-    "prepublishOnly": "echo \"\nPlease use ./scripts/publish instead\n\" && exit 1",
+    "publish": "./scripts/publish",
     "prettier": "prettier './**/*.{js,ts,md,html,css}' --write",
     "prettier-check": "prettier './**/*.{js,ts,md,html,css}' --check"
   },
