--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "test": "pnpm lint && pnpm test:unit && pnpm test:package-types && pnpm test:types && pnpm typecheck",
+    "test": "pnpm lint && pnpm test:unit && pnpm typecheck",
     "test:unit": "jest",
     "test:package-types": "attw --pack . --entrypoints ./lib ./pure",
     "test:types": "zx ./tests/types/scripts/test.mjs",
@@ -43,31 +43,32 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.15.3",
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/runtime": "^7.27.6",
-    "@rollup/plugin-replace": "^2.3.1",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^24.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
+    "@babel/runtime": "^7.23.0",
+    "@rollup/plugin-babel": "^6.0.0",
+    "@rollup/plugin-replace": "^5.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "conditional-type-checks": "^1.0.5",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.8.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.6.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^2.6.2",
-    "rollup": "^2.79.2",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "ts-jest": "^24.3.0",
-    "typescript": "^4.1.2",
-    "zx": "^4.2.0"
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.1.2",
+    "prettier": "^3.0.0",
+    "rimraf": "^5.0.0",
+    "rollup": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.2.0",
+    "zx": "^7.2.0"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.28.0",
