--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,28 @@
 {
   "compilerOptions": {
-    // Let Babel deal with transpiling new language features
-    "target": "esnext",
+    // Use ES2020 for better browser compatibility while supporting modern features
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
 
     // These are overridden by the Rollup plugin, but are left here in case you
     // run `tsc` directly for typechecking or debugging purposes
     "outDir": "./dist",
     "rootDir": "./src",
 
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "noEmit": true,
     "allowJs": false,
     "declaration": false,
     "removeComments": false,
     "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "include": ["src"]
+  "include": ["src", "types"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
